Add controller implementation for DELETE /api/menus?key= and /api/menus/{id} #TTF-30 SetComplete
