# api/swagger/swagger.yaml
@@ -50,6 +50,22 @@ paths:
           description: Error
           schema:
             $ref: '#/definitions/ErrorResponse'
+    delete:
+      operationId: deleteByKey
+      summary: 'Delete a menu item with the given key. If [deleteChildren: false] is true, then all children of the deleted item are also deleted (this goes one level deep). If [recursive: false] is true, then the "one level deep" rule is ignored. Any children that remain after the delete have their parent set to the parent of the deleted item (the recursive rule applies here as well).'
+      parameters:
+        - name: key
+          type: string
+          format: hex
+          in: query
+          required: true
+      responses:
+        "204":
+          description: Success
+        default:
+          description: Error
+          schema:
+            $ref: '#/definitions/ErrorResponse'
   /menus/{id}:
     x-swagger-router-controller: menu-items.server.controller
     get:
@@ -71,7 +87,7 @@ paths:
           schema:
             $ref: '#/definitions/ErrorResponse'
     delete:
-      operationId: delete
+      operationId: deleteById
       summary: 'Delete a menu item with the given id. If [deleteChildren: false] is true, then all children of the deleted item are also deleted (this goes one level deep). If [recursive: false] is true, then the "one level deep" rule is ignored. Any children that remain after the delete have their parent set to the parent of the deleted item (the recursive rule applies here as well).'
       parameters:
         - name: id
@@ -79,14 +95,6 @@ paths:
           format: hex
           in: path
           required: true
-        - name: deleteChildren
-          type: boolean
-          in: query
-          required: false
-        - name: recursive
-          type: boolean
-          in: query
-          required: false
       responses:
         "204":
           description: Success
